refactor: rename the project

--- a/tools/gen/templates/cmd.tmpl
+++ b/tools/gen/templates/cmd.tmpl
@@ -1,7 +1,7 @@
 package cmd
 
 import (
-	"github.com/fhluo/hanconv/pkg/{{.packageName}}"
+	"github.com/fhluo/gocc/pkg/{{.packageName}}"
 	"github.com/spf13/cobra"
 )
 
